#1 Add docker-compose to project

--- a/composer.json
+++ b/composer.json
@@ -113,7 +113,10 @@
         },
         "preferred-install": "dist",
         "sort-packages": true,
-        "optimize-autoloader": true
+        "optimize-autoloader": true,
+        "allow-plugins": {
+            "kylekatarnls/update-helper": true
+        }
     },
     "extra": {
         "branch-alias": {
