--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
         "symfony/polyfill-mbstring": "*"
     },
     "require": {
-        "php": "^7.1.3",
+        "php": "^7.2.5",
         "ext-mbstring": "*",
         "ext-openssl": "*",
         "ext-xml": "*",
@@ -45,11 +45,11 @@
         "doctrine/dbal": "2.9.*",
         "fideloper/proxy": "^4.0",
         "graham-campbell/binput": "^6.0",
-        "graham-campbell/exceptions": "^11.1",
+        "graham-campbell/exceptions": "^13.1",
         "graham-campbell/markdown": "^11.2",
         "guzzlehttp/guzzle": "^6.3.3",
         "jenssegers/date": "^3.4",
-        "laravel/framework": "5.8.*",
+        "laravel/framework": "^6.0",
         "laravel/tinker": "^1.0",
         "mccool/laravel-auto-presenter": "^7.1",
         "nexmo/client": "^1.5",
@@ -65,8 +65,7 @@
         "fzaninotto/faker": "^1.8",
         "graham-campbell/analyzer": "^2.1",
         "mockery/mockery": "^1.2",
-        "phpunit/phpunit": "^7.4",
-        "tightenco/mailthief": "^0.3.14"
+        "phpunit/phpunit": "^7.4"
     },
     "suggest": {
         "ext-apc": "APC Support cache driver."
@@ -109,7 +108,7 @@
     },
     "config": {
         "platform": {
-            "php": "7.1.3"
+            "php": "7.2.5"
         },
         "preferred-install": "dist",
         "sort-packages": true,
