--- a/composer.json
+++ b/composer.json
@@ -34,13 +34,13 @@
         "ext-openssl": "*",
         "ext-xml": "*",
         "alt-three/bus": "^4.1",
-        "cachethq/badger": "^2.0",
-        "cachethq/emoji": "^3.0",
-        "cachethq/twitter": "^3.0",
         "alt-three/validator": "^4.1",
         "aws/aws-sdk-php": "^3.7",
         "barryvdh/laravel-cors": "^0.11.0",
         "bugsnag/bugsnag-laravel": "^2.15",
+        "cachethq/badger": "^2.0",
+        "cachethq/emoji": "^3.0",
+        "cachethq/twitter": "^3.0",
         "chillerlan/php-qrcode": "^2.0",
         "doctrine/dbal": "2.9.*",
         "fideloper/proxy": "^4.0",
@@ -50,6 +50,7 @@
         "guzzlehttp/guzzle": "^6.3.3",
         "jenssegers/date": "^3.4",
         "laravel/framework": "^6.0",
+        "laravel/helpers": "^1.5",
         "laravel/tinker": "^1.0",
         "mccool/laravel-auto-presenter": "^7.1",
         "nexmo/client": "^1.5",
