--- a/composer.json
+++ b/composer.json
@@ -62,7 +62,7 @@
     "ext-sqlite3": "*",
     "alt-three/testbench": "5.0.x-dev",
     "barryvdh/laravel-debugbar": "^3.2",
-    "filp/whoops": "^2.4",
+    "spatie/laravel-ignition": "^1.6",
     "fzaninotto/faker": "^1.8",
     "graham-campbell/analyzer": "^3.1",
     "mockery/mockery": "^1.2",
