--- a/composer.json
+++ b/composer.json
@@ -36,14 +36,11 @@
     "alt-three/bus": "^4.1",
     "alt-three/validator": "^4.1",
     "aws/aws-sdk-php": "^3.7",
-    "fruitcake/laravel-cors": "^v3.0.0",
     "bugsnag/bugsnag-laravel": "^2.15",
-    "steffjenl/badger": "^2.0",
-    "steffjenl/emoji": "^3.0",
-    "steffjenl/twitter": "^3.0",
     "chillerlan/php-qrcode": "^2.0",
     "doctrine/dbal": "3.5.*",
     "fideloper/proxy": "^4.0",
+    "fruitcake/laravel-cors": "^v3.0.0",
     "graham-campbell/binput": "^9.1",
     "graham-campbell/exceptions": "^14.1",
     "graham-campbell/markdown": "^13.1",
@@ -51,25 +48,31 @@
     "jenssegers/date": "^v4.0.0",
     "laravel/framework": "^8.0",
     "laravel/helpers": "^1.5",
+    "laravel/legacy-factories": "^1.3",
+    "laravel/nexmo-notification-channel": "^3.0",
     "laravel/sanctum": "^2.11",
+    "laravel/slack-notification-channel": "^2.4",
     "laravel/tinker": "^2.5",
     "mccool/laravel-auto-presenter": "^7.1",
-    "nexmo/client-core": "^2.9",
+    "nexmo/laravel": "^3.0",
     "pragmarx/google2fa": "^5.0",
     "predis/predis": "^1.1",
-    "twig/twig": "^2.6",
-    "spatie/laravel-ignition": "^1.6"
+    "spatie/laravel-ignition": "^1.6",
+    "steffjenl/badger": "^2.0",
+    "steffjenl/emoji": "^3.0",
+    "steffjenl/twitter": "^3.0",
+    "twig/twig": "^2.6"
   },
   "require-dev": {
     "ext-sqlite3": "*",
-    "alt-three/testbench": "5.0.x-dev",
+    "steffjenl/testbench": "^4.2",
     "barryvdh/laravel-debugbar": "^3.2",
-    "graham-campbell/analyzer": "^3.1",
-    "mockery/mockery": "^1.4.4",
-    "phpunit/phpunit": "^9.5.10",
     "fakerphp/faker": "^1.9.1",
+    "graham-campbell/analyzer": "^3.1",
     "laravel/sail": "^1.0.1",
-    "nunomaduro/collision": "^5.10"
+    "mockery/mockery": "^1.4.4",
+    "nunomaduro/collision": "^5.10",
+    "phpunit/phpunit": "^9.5.10"
   },
   "suggest": {
     "ext-apc": "APC Support cache driver."
@@ -133,15 +136,19 @@
   "repositories": [
     {
       "type": "vcs",
-      "url": "git@github.com:steffjenl/Twitter.git"
+      "url": "https://github.com/steffjenl/Twitter.git"
     },
     {
       "type": "vcs",
-      "url": "git@github.com:steffjenl/Emoji.git"
+      "url": "https://github.com/steffjenl/Emoji.git"
     },
     {
       "type": "vcs",
-      "url": "git@github.com:steffjenl/Badger.git"
+      "url": "https://github.com/steffjenl/Badger.git"
+    },
+    {
+      "type": "vcs",
+      "url": "https://github.com/steffjenl/TestBench.git"
     }
   ]
 }
