--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -2,19 +2,19 @@ name: Laravel
 
 on:
   push:
-    branches: [ "2.4" ]
+    branches: [ "develop" ]
   pull_request:
-    branches: [ "2.4" ]
+    branches: [ "develop" ]
 
 jobs:
   laravel-tests:
 
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-22.04
 
     steps:
     - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
       with:
-        php-version: '7.4'
+        php-version: '8.1'
     - uses: actions/checkout@v3
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
