Fixed all unit tests for PHPUnit 10 and Laravel 10

--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -2,14 +2,14 @@ name: Laravel
 
 on:
   push:
-    branches: [ "develop" ]
+    branches: [ "develop", "main" ]
   pull_request:
-    branches: [ "develop" ]
+    branches: [ "develop", "main" ]
 
 jobs:
   laravel-tests:
 
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
 
     steps:
     - uses: shivammathur/setup-php@72ae4ccbe57f82bbe08411e84e2130bd4ba1c10f
