Fixing github tests

--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -34,4 +34,6 @@ jobs:
       env:
         DB_CONNECTION: sqlite
         DB_DATABASE: database/database.sqlite
+        MAIL_ADDRESS: "test@example.com"
+        MAIL_NAME: "Test"
       run: vendor/bin/phpunit
