Yarn upgrade and some timezone in footer is now visible if support option is disabled and dutch translation for posted.

--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "rebuild": "^0.1.2"
   },
   "collective": {
-    "type": "opencollective",
-    "url": "https://opencollective.com/Cachet"
+    "type": "paypal",
+    "url": "https://www.paypal.com/paypalme/steffjenl"
   }
 }
