--- a/.env.example
+++ b/.env.example
@@ -36,8 +36,9 @@ REDIS_PORT=null
 
 GITHUB_TOKEN=null
 
-NEXMO_KEY=null
-NEXMO_SECRET=null
-NEXMO_SMS_FROM=Cachet
+VONAGE_KEY=null
+VONAGE_SECRET=null
+VONAGE_SMS_FROM="Okazanta"
+VONAGE_APPLICATION_ID=null
 
 TRUSTED_PROXIES=
